--- a/components/inputs.html
+++ b/components/inputs.html
@@ -1,4 +1,8 @@
 <div class="input-group">
-    <input type="search" class="input" placeholder="Enter domain name here...">
+    <input
+        type="search"
+        class="input"
+        placeholder="Enter domain name here..."
+    />
     <button class="btn btn--accent">Search</button>
 </div>
