--- a/components/medias.html
+++ b/components/medias.html
@@ -6,6 +6,11 @@
     </div>
     <div class="media__body">
         <h3 class="media__title">Easy Start & Managed Updates.</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti voluptatem repellendus deleniti commodi at quas facere voluptas eaque id adipisci dolorem provident doloremque, voluptates ducimus deserunt modi, officiis magni unde.</p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti
+            voluptatem repellendus deleniti commodi at quas facere voluptas
+            eaque id adipisci dolorem provident doloremque, voluptates ducimus
+            deserunt modi, officiis magni unde.
+        </p>
     </div>
 </div>
