--- a/components/quotes.html
+++ b/components/quotes.html
@@ -1,5 +1,8 @@
 <blockquote class="quote">
-    <p class="quote__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, quasi cupiditate eos ipsum similique nam sed. Eos dolor aliquam soluta.</p>
+    <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem,
+        quasi cupiditate eos ipsum similique nam sed. Eos dolor aliquam soluta.
+    </p>
     <footer>
         <div class="media">
             <div class="media__image">
